src/objects/HWS_Suspension__c.object
<CustomObject>
    <description>HWSDDP-138</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>HWS_Contact_Name__r.FirstName  + &quot;  &quot;+ HWS_Contact_Name__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HWSDDP-138</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Suspension</relationshipLabel>
        <relationshipName>Suspension1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_Customer_Contact1_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Contact 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HWS_Customer_Contact2_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Contact2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HWS_Email_Content__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_Internal_Notes__c</fullName>
        <description>HWSDDP-138</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_Nokia_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HWS_Service_Contract_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HWSDDP-138</description>
        <label>Service Contract Name</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Suspension</relationshipLabel>
        <relationshipName>Suspension1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_Support_Ticket_Contact_Email__c</fullName>
        <description>HWSDDP-138</description>
        <formula>HWS_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Ticket Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Support_Ticket_Contact_Phone__c</fullName>
        <description>HWSDDP-138</description>
        <formula>HWS_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Ticket Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Suspension_End_Date__c</fullName>
        <description>HWSDDP-138</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Suspension End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HWS_Suspension_Owner__c</fullName>
        <formula>HWS_Service_Contract_Name__r.CH_ServiceContractOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suspension Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Suspension_Start_Date__c</fullName>
        <description>HWSDDP-138</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Suspension Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HWS_Suspension_Status__c</fullName>
        <description>HWSDDP-138</description>
        <label>Suspension Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>UnSuspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Suspension</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HWS_Suspension_Status__c</columns>
        <columns>HWS_Contact_Name__c</columns>
        <columns>HWS_Support_Ticket_Contact_Phone__c</columns>
        <columns>HWS_Support_Ticket_Contact_Email__c</columns>
        <columns>HWS_Service_Contract_Name__c</columns>
        <columns>HWS_Suspension_Start_Date__c</columns>
        <columns>HWS_Suspension_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HWS_All_Pending_Review_Suspension</fullName>
        <columns>NAME</columns>
        <columns>HWS_Suspension_Status__c</columns>
        <columns>HWS_Contact_Name__c</columns>
        <columns>HWS_Support_Ticket_Contact_Phone__c</columns>
        <columns>HWS_Support_Ticket_Contact_Email__c</columns>
        <columns>HWS_Service_Contract_Name__c</columns>
        <columns>HWS_Suspension_Start_Date__c</columns>
        <columns>HWS_Suspension_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HWS_Suspension_Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <label>All Pending Review Suspension</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>All_internal_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HWS_All_Suspended_Suspension</fullName>
        <columns>NAME</columns>
        <columns>HWS_Suspension_Status__c</columns>
        <columns>HWS_Contact_Name__c</columns>
        <columns>HWS_Support_Ticket_Contact_Phone__c</columns>
        <columns>HWS_Support_Ticket_Contact_Email__c</columns>
        <columns>HWS_Service_Contract_Name__c</columns>
        <columns>HWS_Suspension_Start_Date__c</columns>
        <columns>HWS_Suspension_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HWS_Suspension_Status__c</field>
            <operation>equals</operation>
            <value>Suspended</value>
        </filters>
        <label>All Suspended Suspension</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>All_internal_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HWS_All_Unsuspended_Suspension</fullName>
        <columns>NAME</columns>
        <columns>HWS_Suspension_Status__c</columns>
        <columns>HWS_Contact_Name__c</columns>
        <columns>HWS_Support_Ticket_Contact_Phone__c</columns>
        <columns>HWS_Support_Ticket_Contact_Email__c</columns>
        <columns>HWS_Service_Contract_Name__c</columns>
        <columns>HWS_Suspension_Start_Date__c</columns>
        <columns>HWS_Suspension_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HWS_Suspension_Status__c</field>
            <operation>equals</operation>
            <value>UnSuspended</value>
        </filters>
        <label>All Unsuspended Suspension</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>All_internal_users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Service Suspension ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suspension</pluralLabel>
    <recordTypes>
        <fullName>HWS_Suspension</fullName>
        <active>true</active>
        <description>HWSDDP-138</description>
        <label>HWS Suspension</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>SVQ_Workgroup_Team__c</fullName>
        <label>SVQ Workgroup Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>CH_Validate_Suspension_Status</fullName>
        <active>true</active>
        <description>https://jiradc2.ext.net.nokia.com/browse/HWSDDP-75#</description>
        <errorConditionFormula>IF (

	!ISNEW(),
	
	IF(  ISCHANGED(HWS_Suspension_Status__c),
	
		IF(
			AND(
				TEXT(PRIORVALUE( HWS_Suspension_Status__c))=&apos;Pending Review&apos; ,
				AND(TEXT(HWS_Suspension_Status__c) != &apos;Suspended&apos;,
				   TEXT(HWS_Suspension_Status__c)!=&apos;Rejected&apos;													
				)
			),
			TRUE,
			IF(
				AND(
					TEXT(PRIORVALUE( HWS_Suspension_Status__c))=&apos;Suspended&apos; ,
					TEXT(HWS_Suspension_Status__c) != &apos;UnSuspended&apos;
				),
				TRUE,
				IF(
					AND(
						TEXT(PRIORVALUE( HWS_Suspension_Status__c))=&apos;UnSuspended&apos; ,
						TEXT(HWS_Suspension_Status__c) != &apos;Pending Review&apos;
					),
					TRUE,
						IF(
							AND(
								TEXT(PRIORVALUE( HWS_Suspension_Status__c))=&apos;Rejected&apos; ,
								TEXT(HWS_Suspension_Status__c) != &apos;Pending Review&apos;
							),
							TRUE,
							FALSE
			
						)
		
				)
		
			)
		
		)
	
	,
	
	FALSE
	
	
	)
	
	,
	
	FALSE

)</errorConditionFormula>
        <errorDisplayField>HWS_Suspension_Status__c</errorDisplayField>
        <errorMessage>Invalid Status Transition</errorMessage>
    </validationRules>
</CustomObject>